--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,12 @@
-
-/* Your CSS Code here. */
+.moviePic{
+	height:300px;
+	width:200px;
+	opacity: 50%; 
+}
+.movieDetail {
+  position: absolute;     
+  top: 50%;               
+  width: 100%;             
+  text-align: center;     
+  font-size: 24px; 
+}
